# DataScience

./: .gitignore  README.md  requirements.txt  requirments.txt
AB_testing/: estimation_paths.ipynb
AB_testing/Bayesian/: 01_understanding_beta_distribution.Rmd  01_understanding_beta_distribution.html  01_understanding_beta_distribution.md  02_understanding_empirical_bayes_estimation.Rmd  02_understanding_empirical_bayes_estimation.html  02_understanding_empirical_bayes_estimation.md  03_understanding_credible_intervals.Rmd  03_understanding_credible_intervals.html  03_understanding_credible_intervals.md  04_false_discovery_rate.Rmd  04_false_discovery_rate.html  04_false_discovery_rate.md  05_A:B_testing_of_batters.Rmd  05_A:B_testing_of_batters.nb.html  05_A_B_testing_of_batters.html  05_A_B_testing_of_batters.md  05a_understanding_beta_binomial_regression.Rmd  05a_understanding_beta_binomial_regression.html  05a_understanding_beta_binomial_regression.md  06_heirarchical_modelling.Rmd  06_heirarchical_modelling.html  06_heirarchical_modelling.md  (+12 more)
Data_Analysis/: diabetes_dataset_scikit_learn.ipynb
Datasets/: Datasets.md
Datasets_Tools_and_Packages/: README.md
Model_API_Example/: .env.example  Pipfile  README.md  api.py  blueprints.py  config.yml.example  settings.py  wsgi.py
Model_Productionisation/: Pipfile  api.py  blueprints.py  settings.py  wsgi.py
Recommendation_Systems/: book_crossings.ipynb
Recommendation_Systems/steam_games/: Dockerfile  README.md  docker-compose.yml  download.py  game_tags.txt  games_none.json  games_with_tags_double_filter.json  pyproject.toml  requirements.txt
Recommendation_Systems/steam_games/app/: app.py  wsgi.py
Recommendation_Systems/steam_games/app/data/: game_weights.npy  game_weights_200.pkl  games_none.json  games_with_tags_double_filter.json  tag_weights.npy  tag_weights_200.pkl
Recommendation_Systems/steam_games/app/static/css/: styles.css
Recommendation_Systems/steam_games/app/templates/: index.html
Recommendation_Systems/steam_games/notebooks/: 00_3_Model_Eval_and_Visulaisations.ipynb  00_download_data.ipynb  01_exploratory_anlaysis.ipynb  02_model.ipynb  03_Model_Eval_and_Visulaisations.ipynb
Theory/: pyproject.toml
Theory/deep_learning/reinforcement_learning/: 01_introduction.ipynb  02_markov_decision_process.ipynb  03_Approximate_Q_Learning.ipynb
Theory/imbalanced_data/: imbalanced_datasets.ipynb  pyproject.toml
Theory/recommender_systems/collaborative_filtering/: item_based_colab.ipynb  user_based_colab.ipynb
data_tools/: README.md
(+167 files in other folders)
