[tool.poetry]
name = "steam_games"
version = "0.1.0"
description = ""
authors = ["Harpal Sahota"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
numpy = "^1.18.1"
flask-material = "^0.1.1"

[tool.poetry.dev-dependencies]
keras = "^2.3.1"
pandas = "^0.25.3"
seaborn = "^0.10.0"
requests = "^2.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
