[tool.poetry]
name = "steam_games"
version = "0.1.0"
description = ""
authors = ["Harpal Sahota"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
numpy = "^1.18.1"
flask-material = "^0.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pandas = "^0.25.3"
seaborn = "^0.10.0"
requests = "^2.22.0"
sklearn = "^0.0"
keras = "^2.3.1"
tensorflow = "1.13.1"
flake8 = "^3.7.9"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
