[tool.poetry]
name = "imbalanced_data"
version = "0.1.0"
description = ""
authors = ["Harpal Sahota <harpal28sahota@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.0.0"
scipy = "^1.4.1"
seaborn = "^0.10.0"
statsmodels = "^0.11.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
